fix(display): fixed layout issues in simulator on tablet

--- a/apps/client/src/default-theme.less
+++ b/apps/client/src/default-theme.less
@@ -4,7 +4,7 @@
 
 // -------- Breakpoints ------
 @mobile: ~"screen and (max-width: 575px)";
-@tablet: ~"screen and (min-width: 576px) and (max-width: 992px)";
+@tablet: ~"screen and (min-width: 576px) and (max-width: 1025px)";
 @desktop: ~"screen and (min-width: 993px)";
 
 // -------- Colors -----------
